added some HTML for testing. TODO: finish html for testing and additional logic for 'click' event

--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
         </div>
     </div>
 
+    <div class="container">
+        <button type="button" class="btn btn-primary gem" name="emerald"></button>
+        <button type="button" class="btn btn-primary gem" name="diamond"></button>
+        <button type="button" class="btn btn-primary gem" name="sapphire"></button>
+        <button type="button" class="btn btn-primary gem" name="ruby"></button>
+    </div>
+
     <script type="text/javascript" src="assets/javascript/game.js"></script>
 </body>
 
