adding some addtional jquery functions for resetting and reassigning gem values. TODO: find way to connect the values of the gem from js to html and retrieve values to add to userNumTotal

--- a/index.html
+++ b/index.html
@@ -21,10 +21,19 @@
     </div>
 
     <div class="container">
-        <button type="button" class="btn btn-primary gem" name="emerald"></button>
-        <button type="button" class="btn btn-primary gem" name="diamond"></button>
-        <button type="button" class="btn btn-primary gem" name="sapphire"></button>
-        <button type="button" class="btn btn-primary gem" name="ruby"></button>
+        <div class="card">
+            <div class="card-body">
+                Target Number to reach: <br>
+                <div class="targetNum"></div>"
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <button type="button" class="btn btn-primary gem emerald" name="emerald"></button>
+        <button type="button" class="btn btn-primary gem diamond" name="diamond"></button>
+        <button type="button" class="btn btn-primary gem sapphire" name="sapphire"></button>
+        <button type="button" class="btn btn-primary gem ruby" name="ruby"></button>
     </div>
 
     <script type="text/javascript" src="assets/javascript/game.js"></script>
