--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="card">
             <div class="card-body">
                 Target Number to reach: <br>
-                <div class="targetNum"></div>"
+                <div class="targetNum">0</div>"
             </div>
         </div>
     </div>
