--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="container">
         <div class="alert alert-success" role="alert">
-            <h4 class="alert-heading">Crystal Collector</h4>
+            <h4 class="alert-heading">Crystal Collector Game</h4>
         </div>
     </div>
 
@@ -24,16 +24,32 @@
         <div class="card">
             <div class="card-body">
                 Target Number to reach: <br>
-                <div class="targetNum">0</div>"
+                <div class="targetNum">0</div>
             </div>
         </div>
     </div>
 
     <div class="container">
-        <button type="button" class="btn btn-primary gem emerald" name="emerald"></button>
-        <button type="button" class="btn btn-primary gem diamond" name="diamond"></button>
-        <button type="button" class="btn btn-primary gem sapphire" name="sapphire"></button>
-        <button type="button" class="btn btn-primary gem ruby" name="ruby"></button>
+        <div class="card">
+            <div class="card-body">
+                <p>Wins: <span class="wins">0</span></p>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="card">
+            <div class="card-body">
+                <p>Losses: <span class="loss">0</span></p>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <button type="button" alt="emerald" class="btn btn-primary gem emerald" src="" name="emerald"><img src="assets/images/diamonds-clipart-emerald-5.png"></button>
+        <button type="button" alt="diamond" class="btn btn-primary gem diamond" name="diamond"><img src="assets/images/diamond.png"></button>
+        <button type="button" alt="sapphire" class="btn btn-primary gem sapphire" name="sapphire"><img src="assets/images/sapphire.png"></button>
+        <button type="button" alt="ruby" class="btn btn-primary gem ruby" name="ruby"><img src="assets/images/ruby.png"></button>
     </div>
 
     <script type="text/javascript" src="assets/javascript/game.js"></script>
