added card sizes

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 
 <body>
     <div class="container">
-        <div class="alert alert-success" role="alert">
+        <div class="alert alert-success w-25" role="alert">
             <h4 class="alert-heading">Crystal Collector Game</h4>
         </div>
     </div>
 
     <div class="container">
-        <div class="card">
+        <div class="card w-50">
             <div class="card-body directions">
                 <p>You will be give a random number at the start of the game.</p>
 
@@ -51,7 +51,7 @@
 
     <div class="container score">
         <div class="score">
-            <div class="card">
+            <div class="card w-25">
                 <div class="card-body">
                     <p>Wins: <span class="wins">0</span></p>
                     <p>Losses: <span class="loss">0</span></p>
