added little message upon winning/losing of a game

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         <div class="score">
             <div class="card w-25">
                 <div class="card-body">
+                    <p class="score-body"></p>
                     <p>Wins: <span class="wins">0</span></p>
                     <p>Losses: <span class="loss">0</span></p>
                 </div>
